# wordle-reflex-frp

frontend/: frontend.cabal
frontend/src/: Frontend.hs  Grid.hs  Keyboard.hs  Messages.hs
frontend/src/Words/: Daily.hs  Dictionary.hs
static/: dictionary.json  main.css
